# rmr-projection-ui

./: .dockerignore  .flake8  .gitignore  .releaserc  .releaserc.prerelease.yml  .releaserc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose-devcontainer.yml  docker-compose-observability-stack.yml  docker-compose.yaml  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  requirements.dev.txt  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json  docker-compose-development.yml  ownerships.sh  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  task.md  user-story.md
.github/workflows/: build-and-push-to-dockerhub.yml  ci-cd.yml  ci.yml  ci_release.yml  docker_hub_courier.yml  push-image-alpha.yml  release.yml
app/: Dockerfile  requirements.txt
app/src/: routes.py  wsgi.py
app/src/bmr/: model.py
app/src/bmr/helpers/: coefficients.py  equation_s.py  equations.py  time_projection.py  user_inputs.py  weight_projection.py
app/src/bmr_calcualtor/: coefficients.py  equations.py  model.py  time_projection.py
app/src/bmr_calcualtor/tests/: conftest.py  test_equations.py  test_model.py  test_time_projection.py
app/src/static/: script.js  styles.css  styles_old.css
app/src/templates/: index.html  index_old.html  test.html
app/src/tests/: test_routes.py
mkModules/: cans.mk  colors.mk  git.mk  service.mk
prometheus/: Dockerfile  prometheus.yml
service/: .dockerignore  Dockerfile  Procfile  main.py  requirements.txt  wsgi.py
service/models/: schemas.py
service/otel/: __init__.py  otel_logs.py  otel_metrics.py  otel_traces.py
service/src/: routes.py
service/static/: script.js
service/tests/: __init__.py  conftest.py  test_routes.py
src/otel/: otel_logs.py  otel_metrics.py  otel_traces.py
src/static/: script.js
src/tests/: __init__.py  test_routes.py
tests/: test_equation_s.py  test_harris_benedict_eqs.py  test_html_form_structure.py  test_mifflin_eqs.py  test_model.py  test_routes.py  test_time_projection.py  test_weight_projection.py
